--- a/src/styles.css
+++ b/src/styles.css
@@ -125,7 +125,6 @@ header {
 .navbar-social {
   display: flex;
   align-items: center;
-  margin-top: 10px;
   color: var(--navbar-social-text) !important;
   gap: 20px;
 }
@@ -452,7 +451,7 @@ footer .social-account {
 }
 
 .buyout {
-  width: 150px;
+  width: 75%;
   height: 40px;
   border-radius: 5px;
   background-color: var(--interaction-element);
